# ytdlp_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  getcert.sh  pyproject.toml
src/: __init__.py  config.py  main.py
src/bot/: dispatcher.py
src/bot/handlers/: admin.py  downloader.py  start.py
src/bot/middlewares/: auth.py
src/db/: connection.py  models.py  repository.py
src/services/: base.py  dependency_check.py  downloader_factory.py  instagram.py  tiktok.py  twitter.py  youtube.py
src/utils/: file_manager.py  url_parser.py
tests/: conftest.py  test_bot.py  test_db.py  test_downloaders.py  test_url_parser.py
