[project]
name = "ytdlp_bot"
version = "0.1.0"
description = "A modular Telegram Bot that downloads media using yt-dlp and SQLite authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.27.0",
    "sqlalchemy>=2.0.28",
    "aiosqlite>=0.20.0",
    "yt-dlp>=2024.3.10",
    "python-dotenv>=1.0.1",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

